test/corpus/edge_cases.txt
================================================================================
Edge: Empty file (no content)
================================================================================


--------------------------------------------------------------------------------

(source_file)

================================================================================
Edge: Only empty lines
================================================================================



--------------------------------------------------------------------------------

(source_file)

================================================================================
Edge: Only whitespace lines (spaces)
================================================================================



--------------------------------------------------------------------------------

(source_file)

================================================================================
Edge: Only whitespace lines (tabs)
================================================================================



--------------------------------------------------------------------------------

(source_file)

================================================================================
Edge: Single character key
================================================================================

X=1

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Very long key
================================================================================

ABCDEFGHIJKLMNOPQRSTUVWXYZ_0123456789_abcdefghijklmnopqrstuvwxyz=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Equals sign in unquoted value
================================================================================

EQUATION=1+1=2

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Multiple equals in value (base64)
================================================================================

BASE64=dGVzdA==

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Value starting with equals (quoted)
================================================================================

EQUALS="=value"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Edge: Colon in value
================================================================================

TIME=12:30:45

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Semicolon in value
================================================================================

LIST=a;b;c

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Comma in value
================================================================================

CSV=a,b,c

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Parentheses in value
================================================================================

FUNC=foo(bar)

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Brackets in value
================================================================================

ARRAY=[1,2,3]

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Braces in value
================================================================================

OBJ={a:1}

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Pipe in value
================================================================================

COMMAND=cat|grep

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Ampersand in value
================================================================================

QUERY=foo&bar=baz

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: At sign in value
================================================================================

EMAIL=user@example.com

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Tilde in value
================================================================================

HOME=~/projects

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Asterisk in value
================================================================================

GLOB=*.txt

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Question mark in value
================================================================================

URL=http://example.com?q=1

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Caret in value
================================================================================

REGEX=^start

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Dollar in quoted (literal, not escaped)
================================================================================

MONEY="$100"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Edge: Consecutive pairs no blank lines
================================================================================

A=1
B=2
C=3

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Mix of everything
================================================================================

# Configuration file
export API_KEY="secret123"
DATABASE_URL=postgres://localhost/db
EMPTY=
DEBUG=true # Enable debug
MESSAGE='Hello "World"'

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content))
  (pair
    (export_keyword)
    (key)
    (double_quoted_string
      (double_quoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key))
  (pair
    (key)
    (unquoted_value
          (unquoted_content))
    (inline_comment))
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Edge: Space before opening quote (grammar parses as quoted)
================================================================================

KEY= "not quoted"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Edge: Quotes in unquoted value (literal)
================================================================================

KEY=foo"bar"baz

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Mixed quote types in unquoted
================================================================================

KEY=a"b'c"d'e

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Backslash at end triggers continuation (scanner consumes newline)
================================================================================

KEY=value\
continued

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Double backslash followed by more text
================================================================================

KEY=path\\to\\file

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Backslash in middle (literal)
================================================================================

KEY=foo\bar

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Multiple backslashes in middle
================================================================================

KEY=foo\\\\bar

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Very long value
================================================================================

LONG=abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Unicode key characters not allowed (parser error)
================================================================================

日本語=value

--------------------------------------------------------------------------------

(source_file
  (ERROR))

================================================================================
Edge: Leading digit in key (parser error)
================================================================================

123KEY=value

--------------------------------------------------------------------------------

(source_file
  (ERROR))

================================================================================
Edge: Hyphen in key (parser error)
================================================================================

my-key=value

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (key)))

================================================================================
Edge: Period in key (parser error)
================================================================================

my.key=value

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (key)))

================================================================================
Edge: UTF-8 2-byte character in value
================================================================================

CHAR=café

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: UTF-8 3-byte character in value (Chinese)
================================================================================

CHAR=中

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: UTF-8 4-byte character in value (Emoji)
================================================================================

CHAR=🎉

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: RTL text in value (Arabic)
================================================================================

TEXT=مرحبا

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Comment immediately after value (no space = not comment)
================================================================================

KEY=value#notcomment

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Tab then hash (is inline comment)
================================================================================

KEY=value	#comment

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))
    (inline_comment)))

================================================================================
Edge: File with only comments
================================================================================

# Comment 1
# Comment 2
# Comment 3

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content))
  (comment
    (comment_content))
  (comment
    (comment_content)))

================================================================================
Edge: Blank lines between pairs
================================================================================

KEY1=value1

KEY2=value2

KEY3=value3

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Comment between pairs
================================================================================

KEY1=value1
# Middle comment
KEY2=value2

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (comment
    (comment_content))
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Realistic .env file
================================================================================

# Application
NODE_ENV=development
PORT=3000

# Database
DATABASE_URL=postgres://user:password@localhost:5432/mydb

# API Keys
export API_KEY="sk-1234567890abcdef"
SECRET_KEY='super-secret-key'

# Feature Flags
ENABLE_DEBUG=true # Enable debug mode
CACHE_TTL=3600

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content))
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (comment
    (comment_content))
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (comment
    (comment_content))
  (pair
    (export_keyword)
    (key)
    (double_quoted_string
      (double_quoted_content)))
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content)))
  (comment
    (comment_content))
  (pair
    (key)
    (unquoted_value
          (unquoted_content))
    (inline_comment))
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Docker Compose style
================================================================================

COMPOSE_PROJECT_NAME=myproject
COMPOSE_FILE=docker-compose.yml:docker-compose.override.yml
DOCKER_BUILDKIT=1

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: AWS credentials style
================================================================================

AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE
AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
AWS_DEFAULT_REGION=us-west-2

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: React app style
================================================================================

REACT_APP_API_URL=https://api.example.com
REACT_APP_GOOGLE_ANALYTICS_ID=UA-123456789-1
REACT_APP_FEATURE_FLAG_NEW_UI=true

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Edge: Complex JSON in double quotes
================================================================================

CONFIG="{\"database\": {\"host\": \"localhost\", \"port\": 5432}}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content))))

================================================================================
Edge: Security - newline injection attempt in quotes (literal)
================================================================================

INJECT="value
KEY2=injected"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Edge: Security - variable reference now interpolated
================================================================================

REF=${SECRET_KEY}

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
      (variable_expansion))))

================================================================================
Edge: Security - command substitution now interpolated
================================================================================

CMD=$(whoami)

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
      (command_substitution))))

================================================================================
Edge: Escaped quote at string end followed by closing
================================================================================

KEY="value\""

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (escape_sequence))))

================================================================================
Edge: Triple backslash before quote (odd = escaped quote)
================================================================================

KEY="test\\\""

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (escape_sequence)
      (escape_sequence))))
