test/corpus/interpolation.txt
================================================================================
Interpolation: Simple variable ${VAR}
================================================================================

MSG="${VAR}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (variable_expansion))))

================================================================================
Interpolation: Simple variable $VAR
================================================================================

MSG="Hello $USER"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (simple_variable))))

================================================================================
Interpolation: Variable with default (strict) ${VAR:-default}
================================================================================

MSG="${VAR:-default_value}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (variable_expansion))))

================================================================================
Interpolation: Variable with default (loose) ${VAR-default}
================================================================================

MSG="${VAR-fallback}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (variable_expansion))))

================================================================================
Interpolation: Variable with alternate (strict) ${VAR:+alt}
================================================================================

MSG="${VAR:+alternate}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (variable_expansion))))

================================================================================
Interpolation: Variable with alternate (loose) ${VAR+alt}
================================================================================

MSG="${VAR+other}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (variable_expansion))))

================================================================================
Interpolation: Command substitution $(command)
================================================================================

MSG="$(whoami)"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (command_substitution))))

================================================================================
Interpolation: Command with nested parens
================================================================================

MSG="$(echo $(date))"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (command_substitution))))

================================================================================
Interpolation: Escaped dollar (no interpolation)
================================================================================

MSG="\${VAR}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (escape_sequence)
      (double_quoted_content))))

================================================================================
Interpolation: Nested variable in default
================================================================================

MSG="${VAR:-${OTHER}}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (variable_expansion))))

================================================================================
Interpolation: Multiple interpolations
================================================================================

MSG="Hello ${USER}, today is $(date)"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (variable_expansion)
      (double_quoted_content)
      (command_substitution))))

================================================================================
Interpolation: Single-quoted (NO interpolation - literal)
================================================================================

MSG='${VAR}'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Interpolation: Unquoted with variable expansion
================================================================================

MSG=${VAR}

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
      (variable_expansion))))

================================================================================
Interpolation: Variable at start of string
================================================================================

MSG="$USER is here"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (simple_variable)
      (double_quoted_content))))

================================================================================
Interpolation: Variable at end of string
================================================================================

MSG="Hello $USER"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (simple_variable))))

================================================================================
Interpolation: Empty command substitution
================================================================================

MSG="$()"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (command_substitution))))

================================================================================
Interpolation: Empty expansion value
================================================================================

MSG="${VAR:-}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (variable_expansion))))

================================================================================
Interpolation: Dollar followed by digit (literal - not interpolation)
================================================================================

MSG="Price: $100"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (double_quoted_content))))

================================================================================
Interpolation: Dollar at end of string (literal)
================================================================================

MSG="Cost: $"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (double_quoted_content))))

================================================================================
Interpolation: Complex real-world example
================================================================================

DATABASE_URL="${DB_PROTO:-postgres}://${DB_USER:-root}:${DB_PASS}@${DB_HOST:-localhost}:${DB_PORT:-5432}/${DB_NAME}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (variable_expansion)
      (double_quoted_content)
      (variable_expansion)
      (double_quoted_content)
      (variable_expansion)
      (double_quoted_content)
      (variable_expansion)
      (double_quoted_content)
      (variable_expansion)
      (double_quoted_content)
      (variable_expansion))))

================================================================================
Interpolation: Variable with underscore in name
================================================================================

MSG="${MY_VAR}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (variable_expansion))))

================================================================================
Interpolation: Simple var with underscore
================================================================================

MSG="$MY_VAR"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (simple_variable))))

================================================================================
Interpolation: Braced var no operator
================================================================================

MSG="${VAR}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (variable_expansion))))

================================================================================
Interpolation: Mixed escapes and interpolation
================================================================================

MSG="Path: ${HOME}\nUser: $USER"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (variable_expansion)
      (escape_sequence)
      (double_quoted_content)
      (simple_variable))))

